RESOLVED FIXED20134
REGRESSION (2.0.4-3.0.4): No default value set for <input type=range> with an even difference of (max - min)
https://bugs.webkit.org/show_bug.cgi?id=20134
Summary REGRESSION (2.0.4-3.0.4): No default value set for <input type=range> with an...
David Kilzer (:ddkilzer)
Reported 2008-07-22 14:21:05 PDT
* SUMMARY Setting the min and max values on an <input type=range> element such that the difference between them is even, no default value is set for the input element. * STEPS TO REPRODUCE 1. Launch Safari/WebKit. 2. Open attached test case. * EXPECTED RESULTS An alert dialog with "PASS: '50'" should be displayed and "50" should be displayed in the read-only text field. * ACTUAL RESULTS An alert dialog with "FAIL: ''" is displayed and no value is displayed in the read-only text field. * REGRESSION Unknown. Only tested WebKit nightly build r35249.
Attachments
Test case (635 bytes, text/html)
2008-07-22 14:21 PDT, David Kilzer (:ddkilzer)
no flags
First attempt (3.50 KB, patch)
2008-10-03 04:32 PDT, Rob Buis
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2008-07-22 14:21:26 PDT
Created attachment 22433 [details] Test case
Mark Rowe (bdash)
Comment 2 2008-07-22 17:30:34 PDT
David Kilzer (:ddkilzer)
Comment 3 2008-07-23 06:58:01 PDT
This is a regression from Safari 2.0.4 (which behaved correctly). Unfortunately, the earliest nightly build (r11976) also shows the bug, so a bisect of nightly builds can't be done.
Rob Buis
Comment 4 2008-10-03 04:32:18 PDT
Created attachment 24047 [details] First attempt I think this patch should fix the problem. Cheers, Rob.
Darin Adler
Comment 5 2008-10-03 08:54:33 PDT
Comment on attachment 24047 [details] First attempt r=me
Rob Buis
Comment 6 2008-10-03 12:23:23 PDT
Landed in r37247.
Note You need to log in before you can comment on or make changes to this bug.