        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=20134
        REGRESSION (2.0.4-3.0.4): No default value set for <input type=range> with an even difference of (max - min)

        Make sure the input element gets the right default value when no value is set.

        Test: fast/forms/range-default-value.html



Canonical link: https://commits.webkit.org/29506@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37247 268f45cc-cd09-0410-ab3c-d52691b4dbfc